src/styles/main/_search.scss
.search-wrapper {
  position: relative;
  border-radius: 1em;
  margin: 0.5em 1em;
  display: flex;
  flex-direction: row;

  .address-search:focus {
    border-color: inherit;
    -webkit-box-shadow: none;
    box-shadow: none;
  }

  .address-search {
    padding: calc($base-spacing / 4) 1em;
    padding-right: 2.2em; // space for the icon
    border: 1px solid $base-border-color;
    margin: 0;
    display: block;
  }

  .address-search-icon {
    position: absolute;
    right: 0.9em;
    top: 20%;
  }
}

.address-search-results.autocomplete-suggestions {
  top: 135px;
  background-color: #f2f2f2;
  border: 1px solid #ddd;
  border-radius: 4px;

  .autocomplete-suggestions-header,
  .autocomplete-suggestions-wrapper {
    margin-right: 12px;
    padding: 0;
  }

  .autocomplete-suggestion {
    line-height: 1.5;
    color: #666;
    font-size: 0.9em;
    border-bottom: 1px solid #aaa;
    padding: 4px 0;
    margin: 0;

    &:last-child {
      border-bottom: 0;
    }

    b {
      color: #0047ba;
    }
  }

  .autocomplete-suggestion-prop {
    padding: 0 .6em;
  }

  .autocomplete-suggestion-prop:last-child {
    padding: 0 .6em;
    font-size: 0.9em;
    color: #666;
  }

  .autocomplete-suggestion.selected {
      background: #ddd;
  }

  .autocomplete-suggestions-header {
    color: #aaa;
    font-size: 0.9em;
    padding-top: 5px;
    padding-bottom: 5px;
  }
}

